--- a/child_pages/cc-elections/Candidates/reinhardt.html
+++ b/child_pages/cc-elections/Candidates/reinhardt.html
@@ -91,6 +91,11 @@
                                 <div class="nested-burger-links">
                                     <li class="link"><a href="../../../child_pages/cc-elections/cc_election_issues.html">Cumberland County Issues</a></li>
                                     <li class="link"><a href="../../../child_pages/cc-elections/millville_city_issues.html">Millville City Issues</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/bridgeton_school_board_issues.html">Bridgeton School Board Issues</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/commercial_school_board_issues.html">Commercial School Board Issues</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/hopewell-shiloh_school_board_Issues.html">Hopewell-Shiloh School Board Issues</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/lawrence_school_board_issues.html">Lawrence School Board Issues</a></li>
+
                                     <li class="link"><a href="../../../child_pages/cc-elections/vsb_2024_issues.html">Vineland School Board Issues</a></li>
 
                                     <!-- <li class="link"><a href="../../../child_pages/cc-elections/commercial_township_issues.html">Commercial Township Issues</a></li>
@@ -109,6 +114,8 @@
                                     <li class="link"><a href="../cc-elections/us_vice_president_issues.html">Vice President Issues</a></li>
                                     <li class="link"><a href="../cc-elections/us_president_issues.html">President Issues</a></li> -->
                                 </div>
+                            </div>
+
                             </div>
 
                             <li class="link"><a href="../../../child_pages/get-involved.html">Get Involved</a></li>
