--- a/child_pages/cc-elections/commercial_school_board_2024.html
+++ b/child_pages/cc-elections/commercial_school_board_2024.html
@@ -90,6 +90,11 @@
                             <div class="nested-burger-links">
                                 <li class="link"><a href="../cc-elections/cc_election_issues.html">Cumberland County Issues</a></li>
                                 <li class="link"><a href="../cc-elections/cc_election_issues.html">Millville City Issues</a></li>
+                                <li class="link"><a href="../cc-elections/bridgeton_school_board_issues.html">Bridgeton School Board Issues</a></li>
+                                <li class="link"><a href="../cc-elections/commercial_school_board_issues.html">Commercial School Board Issues</a></li>
+                                <li class="link"><a href="../cc-elections/hopewell-shiloh_school_board_Issues.html">Hopewell-Shiloh School Board Issues</a></li>
+                                <li class="link"><a href="../cc-elections/lawrence_school_board_issues.html">Lawrence School Board Issues</a></li>
+
                                 <li class="link"><a href="../cc-elections/vsb_2024_issues.html">Vineland School Board Issues</a></li>
 
                                 <!-- <li class="link"><a href="../cc-elections/commercial_township_issues.html">Commercial Township Issues</a></li>
@@ -109,7 +114,7 @@
                                 <li class="link"><a href="../cc-elections/us_president_issues.html">President Issues</a></li> -->
                             </div>
                         </div>
-
+                        
                         <li class="link"><a href="../get-involved.html">Get Involved</a></li>
                         <li class="link"><a href="../events.html">Events</a></li>
                         <li class="link"><a href="../resources-archives-and-rabbit-holes.html">Extra Info</a></li>
