--- a/child_pages/cc-elections/governor.html
+++ b/child_pages/cc-elections/governor.html
@@ -95,8 +95,12 @@
                             <div class="nested-burger-links">
                                 <li class="link"><a href="../cc-elections/cc_election_issues.html">Cumberland County Issues</a></li>
                                 <li class="link"><a href="../cc-elections/cc_election_issues.html">Millville City Issues</a></li>
-                                <li class="link"><a href="../cc-elections/vsb_2024_issues.html">Vineland School Board Issues</a></li>
+                                <li class="link"><a href="../cc-elections/bridgeton_school_board_issues.html">Bridgeton School Board Issues</a></li>
+                                <li class="link"><a href="../cc-elections/commercial_school_board_issues.html">Commercial School Board Issues</a></li>
+                                <li class="link"><a href="../cc-elections/hopewell-shiloh_school_board_Issues.html">Hopewell-Shiloh School Board Issues</a></li>
+                                <li class="link"><a href="../cc-elections/lawrence_school_board_issues.html">Lawrence School Board Issues</a></li>
 
+                                <li class="link"><a href="../cc-elections/vsb_2024_issues.html">Vineland School Board Issues</a></li>
 
                                 <!-- <li class="link"><a href="../cc-elections/commercial_township_issues.html">Commercial Township Issues</a></li>
                                 <li class="link"><a href="../cc-elections/downe_township_issues.html">Downe Township Issues</a></li>
