--- a/child_pages/timeline.html
+++ b/child_pages/timeline.html
@@ -37,33 +37,37 @@
                         <li class="link"><a id="home" href="https://www.informthevotenj.com/index.html">Home</a></li>
                         
                         <div class="accordion">
-                          <input type="checkbox" name="accordion" id="first">
-                          <label for="first">County and Municipal Elections</label>
-                          <div class="nested-burger-links">
-                              <li class="link"><a href="cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioners</a></li>
-                              <li class="link"><a href="cc-elections/commercial_township_committee.html">Commercial Township Committee</a></li>
-                              <li class="link"><a href="cc-elections/downe_township_committee.html">Downe Township Committee</a></li>
-                              <li class="link"><a href="cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a></li>
+                            <input type="checkbox" name="accordion" id="first">
+                            <label for="first">County and Municipal Elections</label>
+                            <div class="nested-burger-links">
+                                <li class="link"><a href="cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioners</a></li>
+                                <li class="link"><a href="cc-elections/millville_commissioners_2024.html">Millville City Commissioners</a></li>
 
-                              <!-- <li class="link"><a href="../cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk</a></li>
-                              <li class="link"><a href="../cc-elections/millville_commissioners_2024.html">Millville City Commissioners</a></li>
-                              <li class="link"><a href="../cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a></li>
-                              <li class="link"><a href="../cc-elections/vineland_city_council_2024.html">Vineland City Council</a></li>
-                              <li class="link"><a href="../cc-elections/vineland_mayor_2024.html">Vineland Mayor</a></li>                                 -->
-                          </div>
-                      </div>
+                                <!-- <li class="link"><a href="cc-elections/commercial_township_committee.html">Commercial Township Committee</a></li>
+                                <li class="link"><a href="cc-elections/downe_township_committee.html">Downe Township Committee</a></li>
+                                <li class="link"><a href="cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a></li> -->
 
-                      <!-- <div class="accordion">
-                          <input type="checkbox" name="accordion" id="second">
-                          <label for="second">School Board Elections</label>
-                          <div class="nested-burger-links">
-                              <li class="link"><a href="../cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
-                              <li class="link"><a href="../cc-elections/commercial_school_board_2024.html">Commercial Township School Board</a></li>
-                              <li class="link"><a href="../cc-elections/fairfield_school_board_2024.html">Fairfield Township School Board</a></li>
-                              <li class="link"><a href="../cc-elections/lawrence_school_board_2024.html">Lawrence Township School Board</a></li>
-                              <li class="link"><a href="../cc-elections/vsb_2024.html">Vineland School Board</a></li>
-                          </div>
-                      </div> -->
+                                <!-- <li class="link"><a href="../cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk</a></li>
+                                <li class="link"><a href="../cc-elections/millville_commissioners_2024.html">Millville City Commissioners</a></li>
+                                <li class="link"><a href="../cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a></li>
+                                <li class="link"><a href="../cc-elections/vineland_city_council_2024.html">Vineland City Council</a></li>
+                                <li class="link"><a href="../cc-elections/vineland_mayor_2024.html">Vineland Mayor</a></li>                                 -->
+                            </div>
+                        </div>
+
+                      <div class="accordion">
+                            <input type="checkbox" name="accordion" id="second">
+                            <label for="second">School Board Elections</label>
+                            <div class="nested-burger-links">
+                                <li class="link"><a href="../cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
+                                <li class="link"><a href="../cc-elections/commercial_school_board_2024.html">Commercial Township School Board</a></li>
+                                <li class="link"><a href="../cc-elections/hopewell-shiloh_school_board.html">Hopewell-Shiloh School Board</a></li>
+
+                                <!-- <li class="link"><a href="../cc-elections/fairfield_school_board_2024.html">Fairfield Township School Board</a></li> -->
+                                <li class="link"><a href="../cc-elections/lawrence_township_school_board.html">Lawrence Township School Board</a></li>
+                                <li class="link"><a href="../cc-elections/vsb_2024.html">Vineland School Board</a></li>
+                            </div>
+                        </div>
 
                       <div class="accordion">
                           <input type="checkbox" name="accordion" id="third">
@@ -81,27 +85,34 @@
                       </div>
 
                       <div class="accordion">
-                          <input type="checkbox" name="accordion" id="fourth">
-                          <label for="fourth">Issues</label>
-                          <div class="nested-burger-links">
-                              <li class="link"><a href="cc-elections/cc_election_issues.html">Cumberland County Issues</a></li>
-                              <li class="link"><a href="cc-elections/commercial_township_issues.html">Commercial Township Issues</a></li>
-                              <li class="link"><a href="cc-elections/downe_township_issues.html">Downe Township Issues</a></li>
-                              <li class="link"><a href="cc-elections/lawrence_township_issues.html">Lawrence Township Issues</a></li>
-                              <li class="link"><a href="cc-elections/state_assembly_legislative_district_1_issues.html">State Assembly - Legislative District 1 Issues</a></li>
-                              <li class="link"><a href="cc-elections/state_assembly_legislative_district_3_issues.html">State Assembly - Legislative District 3 Issues</a></li>
-                              <li class="link"><a href="cc-elections/governor_issues.html">Governor Issues</a></li>
+                            <input type="checkbox" name="accordion" id="fourth">
+                            <label for="fourth">Issues</label>
+                            <div class="nested-burger-links">
+                                <li class="link"><a href="cc-elections/cc_election_issues.html">Cumberland County Issues</a></li>
+                                <li class="link"><a href="cc-elections/millville_city_issues.html">Millville City Issues</a></li>
+                                <li class="link"><a href="cc-elections/bridgeton_school_board_issues.html">Bridgeton School Board Issues</a></li>
+                                <li class="link"><a href="cc-elections/commercial_school_board_issues.html">Commercial School Board Issues</a></li>
+                                <li class="link"><a href="cc-elections/hopewell-shiloh_school_board_Issues.html">Hopewell-Shiloh School Board Issues</a></li>
+                                <li class="link"><a href="cc-elections/lawrence_school_board_issues.html">Lawrence School Board Issues</a></li>
+                                <li class="link"><a href="cc-elections/vsb_2024_issues.html">Vineland School Board Issues</a></li>
+
+                                <!-- <li class="link"><a href="cc-elections/commercial_township_issues.html">Commercial Township Issues</a></li>
+                                <li class="link"><a href="cc-elections/downe_township_issues.html">Downe Township Issues</a></li>
+                                <li class="link"><a href="cc-elections/lawrence_township_issues.html">Lawrence Township Issues</a></li> -->
+                                <li class="link"><a href="cc-elections/state_assembly_legislative_district_1_issues.html">State Assembly - Legislative District 1 Issues</a></li>
+                                <li class="link"><a href="cc-elections/state_assembly_legislative_district_3_issues.html">State Assembly - Legislative District 3 Issues</a></li>
+                                <li class="link"><a href="cc-elections/governor_issues.html">Governor Issues</a></li>
 
 
-                              <!-- <li class="link"><a href="../cc-elections/cc_county_clerk_issues.html">County Clerk Issues</a></li>
-                              <li class="link"><a href="../cc-elections/millville_city_issues.html">Millville City Issues</a></li>
-                              <li class="link"><a href="../cc-elections/vsb_2024_issues.html">Vineland School Board Issues</a></li>
-                              <li class="link"><a href="../cc-elections/us_house_of_reps_issues.html">House of Representatives Issues</a></li>
-                              <li class="link"><a href="../cc-elections/us_senate_issues.html">US Senate Issues</a></li>
-                              <li class="link"><a href="../cc-elections/us_vice_president_issues.html">Vice President Issues</a></li>
-                              <li class="link"><a href="../cc-elections/us_president_issues.html">President Issues</a></li> -->
-                          </div>
-                      </div>
+                                <!-- <li class="link"><a href="../cc-elections/cc_county_clerk_issues.html">County Clerk Issues</a></li>
+                                <li class="link"><a href="../cc-elections/millville_city_issues.html">Millville City Issues</a></li>
+                                <li class="link"><a href="../cc-elections/vsb_2024_issues.html">Vineland School Board Issues</a></li>
+                                <li class="link"><a href="../cc-elections/us_house_of_reps_issues.html">House of Representatives Issues</a></li>
+                                <li class="link"><a href="../cc-elections/us_senate_issues.html">US Senate Issues</a></li>
+                                <li class="link"><a href="../cc-elections/us_vice_president_issues.html">Vice President Issues</a></li>
+                                <li class="link"><a href="../cc-elections/us_president_issues.html">President Issues</a></li> -->
+                            </div>
+                        </div>
 
                         <li class="link"><a href="get-involved.html">Get Involved</a></li>
                         <li class="link"><a href="events.html">Events</a></li>
