--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@
                             <div class="nested-burger-links">
                                 <li class="link"><a href="child_pages/cc-elections/cc_election_issues.html">Cumberland County Issues</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/millville_city_issues.html">Millville City Issues</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/bridgeton_school_board_issues.html">Bridgeton School Board Issues</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/commercial_school_board_issues.html">Commercial School Board Issues</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/hopewell-shiloh_school_board_Issues.html">Hopewell-Shiloh School Board Issues</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/lawrence_school_board_issues.html">Lawrence School Board Issues</a></li>
+
                                 <li class="link"><a href="child_pages/cc-elections/vsb_2024_issues.html">Vineland School Board Issues</a></li>
 
                                 <!-- <li class="link"><a href="child_pages/cc-elections/commercial_township_issues.html">Commercial Township Issues</a></li>
@@ -357,6 +362,11 @@
                     <div class="county-dropdown-links">
                         <a href="child_pages/cc-elections/cc_election_issues.html">Cumberland County Issues</a>
                         <a href="child_pages/cc-elections/millville_city_issues.html">Millville City Issues</a>
+                        <a href="child_pages/cc-elections/bridgeton_school_board_issues.html">Bridgeton School Board Issues</a>
+                        <a href="child_pages/cc-elections/commercial_school_board_issues.html">Commercial School Board Issues</a>
+                        <a href="child_pages/cc-elections/hopewell-shiloh_school_board.html">Hopewell-Shiloh School Board Issues</a>
+                        <a href="child_pages/cc-elections/lawrence_school_board_issues.html">Lawrence School Board Issues</a>
+
                         <a href="child_pages/cc-elections/vsb_2024_issues.html">Vineland School Board Issues</a>
 
                         <!-- <a href="child_pages/cc-elections/commercial_township_issues.html">Commercial Township Issues</a>
